# LightYears

./: CMakeLists.txt
LightYears/: CMakeLists.txt
LightYears/include/framework/: application.h
LightYears/src/: main.cpp
LightYears/src/framework/: application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: entrypoint.h
LightYearsEngine/include/framework/: actor.h  application.h  assetManager.h  core.h  object.h  world.h
LightYearsEngine/src/: entrypoint.cpp
LightYearsEngine/src/framework/: actor.cpp  application.cpp  assetManager.cpp  object.cpp  world.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/assets/SpaceShooterRedux/Spritesheet/: sheet.xml
LightYearsGame/include/: config.h
LightYearsGame/include/gameFramework/: gameApplication.h
LightYearsGame/src/gameFramework/: gameApplication.cpp
